--- a/styles/header.css
+++ b/styles/header.css
@@ -19,10 +19,24 @@ header .container {
     max-width: 384px;    
 }
 
+#profile img {
+    width: 176px;
+    height: 176px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 0;
+}
+
 #profile h1 {
     font: var(--text-lg);
     color: var(--text-color-primary);
     margin-bottom: 8px;
+}
+
+div p { 
+  margin-top:12px;  
+  width: 384px;
+  height: 120px; 
 }
 
 
